# twoauthrs

./: CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
scripts/: install.sh  uninstall.sh
src/: main.rs
src/xcore/: core.rs
