[package]
name = "tf"
version = "0.0.0"
description = "Two-Factor Authenticator"
authors = ["xTekC"]
repository = "https://github.com/xTekC/tf"
readme = "README.md"
homepage = "https://github.com/xTekC/tf"
documentation = "https://github.com/xTekC/tf/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "async"]
# default-run = "tf -h"
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.73.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "tf"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
qr2term = "0.3.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
totp-lite = "2.0.1"

# [dev-dependencies]


# [build-dependencies]


[profile.rel-opt]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
